--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -3,28 +3,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dynamic Quote Generator</title>
+  <title>Dynamic Quote Generator with Filtering</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <h1>Dynamic Quote Generator</h1>
 
-  <!-- Filter System -->
-  <div>
-    <label for="categoryFilter">Filter by Category:</label>
-    <select id="categoryFilter" onchange="filterQuotes()">
-      <option value="all">All Categories</option>
-    </select>
-  </div>
+  <label for="categoryFilter">Filter by Category:</label>
+  <select id="categoryFilter" onchange="filterQuotes()">
+    <option value="all">All Categories</option>
+  </select>
 
-  <!-- Display filtered quotes -->
   <div id="quoteList" style="margin: 20px 0;"></div>
 
-  <!-- Quote Adding -->
+  <button id="newQuote">Show Random Quote</button>
+
   <h2>Add New Quote</h2>
   <div id="addQuoteFormContainer"></div>
 
-  <!-- Import/Export -->
   <h2>Import / Export Quotes</h2>
   <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
   <button onclick="exportToJsonFile()">Export Quotes</button>
